<resources>
    <string name="app_name">Eyes On The Street</string>
    <string name="about">About</string>
    <string name="eyes_on_the_street_is_a_crowdsourcing_application_where_users_report_crime_perceived_danger_and_suspicious_activities_to_enhance_their_daily_commuting_alternatives">Eyes on the street is a crowdsourcing application where users report crime, perceived danger, and suspicious activities to enhance their daily commuting alternatives.</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="developers">Developers:</string>
    <string name="instructions">Instructions</string>
    <string name="step_1_if_you_are_in_trouble_the_only_thing_you_have_to_do_is_press_the_button_to_ask_for_help_and_the_button_will_send_an_alert_to_someone_in_the_faculty_displaying_your_real_location_and_your_information_that_way_you_will_receive_help_as_soon_as_possible">Step 1, If you are in trouble the only thing you have to do is PRESS THE BUTTON to ask for help and the button will send an alert to someone in the faculty displaying your real location and your information, that way you will receive help as soon as possible.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">log in</string>
    <string name="not_registered_register_here">Not registered? Register here!</string>
    <string name="if_you_need_help_press_the_button">If you need help, press the button!</string>
    <string name="welcome">Welcome!</string>
    <string name="points_earned">Points earned:</string>
    <string name="points_earned_hint">Points earned</string>
    <string name="name">Name:</string>
    <string name="name_hint">Name</string>
    <string name="username_profile">Username:</string>
    <string name="username_hint_profile">Username</string>
    <string name="gender">Gender:</string>
    <string name="gender_hint">Gender</string>
    <string name="date_of_birth">Date Of Birth:</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="home">Home</string>
    <string name="insert_the_following_information">Insert the following information</string>
    <string name="add_name">Add name</string>
    <string name="name_hint_reg">Name</string>
    <string name="add_last_name">Add Last Name</string>
    <string name="last_name_register">Last name</string>
    <string name="date_of_birth_reg">Date of birth</string>
    <string name="mm_dd_yyy_reg">MM/DD/YYYY</string>
    <string name="select_gender_reg">Select gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="i_wish_not_to_disclose">I wish not to disclose.</string>
    <string name="provide_a_username">Provide a username</string>
    <string name="username_hint_register">Username</string>
    <string name="provide_a_password">Provide a password</string>
    <string name="password_hint_register">Password</string>
    <string name="provide_same_password">Provide same password</string>
    <string name="confirm_password_reg">Confirm Password</string>
    <string name="log_in_register">log in</string>
    <string name="already_registered_click_here">Already registered? Click here!</string>
    <string name="thank_you">Thank You</string>
    <string name="report_submitted">Report Submitted</string>
    <string name="someone_is_on_coming_to_assist_you">Someone is on coming to assist you!</string>
    <string name="you_are_here">You are here:</string>
    <string name="profile_menu">Profile</string>
    <string name="instructions_menu">Instructions</string>
    <string name="about_menu">About</string>
    <string name="exit_menu">Exit</string>

    <string-array name="cat1">
        <item>Select</item>
        <item>Theft</item>
        <item>Harassment</item>
        <item>Assault</item>
        <item>Burglary</item>
        <item>Homicide</item>
        <item>Auto theft</item>
        <item>Property destruction</item>
        <item>Kidnapping</item>
        <item>Ran over</item>
    </string-array>

    <string-array name="cat2">
        <item>Select</item>
        <item>Vandalism</item>
        <item>Civil Problem</item>
        <item>Illumination</item>
        <item>Public Areas Maintenance</item>
        <item>Graffiti</item>
        <item>Alcohol-related</item>
    </string-array>

    <string-array name="cat3">
        <item>Select</item>
        <item>Drug/Narcotic</item>
        <item>Vehicle parked in odd location</item>
        <item>Package/luggage unattended</item>
        <item>Someone pays unusual attention to facilities</item>

    </string-array>
    <string name="title_activity_view_m">Map</string>
    <string name="from_the_categories_below_select_appropiate_incident">From the categories below, select appropiate incident</string>
    <string name="other_reason">Other:</string>
    <string name="comments_reort">Comments:</string>
    <string name="submit_report">Submit</string>
    <string name="take_picture">Take Picture</string>
    <string name="criminal_activity">Criminal Activity</string>
    <string name="perceived_danger">Perceived Danger</string>
    <string name="suspicious_circumstances">Suspicious Circumstances</string>
    <string name="you_selected">You Selected:</string>
    <string name="get_current_location">Get Current Location</string>
    <string name="enter_location_manually">Enter Location Manually</string>
    <string name="create_report">Create Report</string>
    <string name="take_picture_proof">Take picture!</string>
    <string name="submit_pic">Submit</string>
    <string name="report_submitted_2">Report Submitted</string>
    <string name="thank_you_submit">Thank You</string>
    <string name="you_are_here_2">You are here:</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="if_incident_occurred_at_displayed_location_confirm_else_manually_select_location">If incident occurred at displayed location confirm. else, manually select location</string>
    <string name="address_will_appear_shortly">Address will appear shortly</string>
    <string name="you_are_here_display">You are here:</string>
    <string name="edit_location_display">Edit Location</string>
    <string name="confirm_location_2">Confirm Location</string>
    <string name="address">Address:</string>
    <string name="confirm_loc">Confirm</string>
    <string name="toast_name">Name and Last name should contain only letters</string>
    <string name="toast_password">Password Not matching</string>
    <string name="toast_empty">There is a Field Empty</string>
    <string name="enable">Please Enable GPS and Internet</string>
    <string name="report_description">Report Description</string>

</resources>
