<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportCategory">

    <Button
        android:id="@+id/cat1button"
        android:layout_width="388dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="7dp"
        android:text="@string/criminal_activity"
        android:background="@drawable/purple_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cat2button"
        android:layout_width="388dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="7dp"
        android:text="@string/perceived_danger"
        android:background="@drawable/purple_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cat3button" />

    <Button
        android:id="@+id/cat3button"
        android:layout_width="388dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="13dp"
        android:text="@string/suspicious_circumstances"
        android:background="@drawable/purple_button"
        app:layout_constraintBottom_toTopOf="@+id/cat2button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cat1button" />

</android.support.constraint.ConstraintLayout>