<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectIncident">

    <ListView
        android:id="@+id/listViewIncidents"
        android:layout_width="374dp"
        android:layout_height="323dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/purple_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="352dp"
        android:layout_height="87dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="100dp"
        android:ems="10"
        android:hint="@string/report_description"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submitIncident"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/purple_button"
        android:text="@string/submit_report"
        android:textColor="#706F71"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/takeIncidentPicture"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/purple_button"
        android:text="@string/take_picture"
        android:textColor="#706F71"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/submitReportB"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="151dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="64dp"
        android:hint="e.g. Grafitti"
        app:layout_constraintBottom_toTopOf="@+id/descriptionEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.327"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/listViewIncidents" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="123dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="103dp"
        android:layout_marginBottom="62dp"
        android:text="You Selected: "
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/descriptionEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewIncidents" />
</android.support.constraint.ConstraintLayout>